--- a/Frontend/src/locale/en.json
+++ b/Frontend/src/locale/en.json
@@ -1,7 +1,7 @@
 {
 
     "home": "Home",
-    "about": "Who are you",
+    "about": "Who are we",
     "all": "All",
     "apartment": "Apartment",
     "villa": "Villa",
